
[TestApp/focus - 1]
[32m╭───────────────────╮[m╭─Messages────────────────────────────────╮
[32m│[m[37m[m[7;37m [m                  [32m│[m│                                         │
[32m│[m[30m                   [m[32m│[m│                                         │
[32m│[m[30m                   [m[32m│[m│                                         │
[32m╰───────────────────╯[m│                                         │
╭─Context───────────╮│                                         │
│[38;2;98;98;98mNo Context.[m        ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
╰───────────────────╯╰─────────────────────────────────────────╯
---

[TestApp/focus - 2]
╭───────────────────╮╭─Messages────────────────────────────────╮
│[37m[37m[m[m[37m[m[37m[37m [m[m[37m[m[37m                  [m││                                         │
│[30m                   [m││                                         │
│[30m                   [m││                                         │
╰───────────────────╯│                                         │
[32m╭─[0m[1;32mContext[m[32m───────────╮[m│                                         │
[32m│[m[38;2;98;98;98mNo Context.[m        [32m│[m│                                         │
[32m│[m                   [32m│[m│                                         │
[32m│[m                   [32m│[m│                                         │
[32m│[m                   [32m│[m│                                         │
[32m│[m                   [32m│[m│                                         │
[32m│[m                   [32m│[m│                                         │
[32m│[m                   [32m│[m│                                         │
[32m│[m                   [32m│[m│                                         │
[32m│[m                   [32m│[m│                                         │
[32m╰───────────────────╯[m╰─────────────────────────────────────────╯
---

[TestApp/focus - 3]
[32m╭───────────────────╮[m╭─Messages────────────────────────────────╮
[32m│[m[37m[m[7;37m [m                  [32m│[m│                                         │
[32m│[m[30m                   [m[32m│[m│                                         │
[32m│[m[30m                   [m[32m│[m│                                         │
[32m╰───────────────────╯[m│                                         │
╭─Context───────────╮│                                         │
│[38;2;98;98;98mNo Context.[m        ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
╰───────────────────╯╰─────────────────────────────────────────╯
---

[TestApp/input - 1]
[32m╭───────────────────╮[m╭─Messages────────────────────────────────╮
[32m│[m[37m[mhey[7;37m [m               [32m│[m│                                         │
[32m│[m[30m                   [m[32m│[m│                                         │
[32m│[m[30m                   [m[32m│[m│                                         │
[32m╰───────────────────╯[m│                                         │
╭─Context───────────╮│                                         │
│[38;2;98;98;98mNo Context.[m        ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
╰───────────────────╯╰─────────────────────────────────────────╯
---

[TestApp/input - 2]
[32m╭───────────────────╮[m╭─Messages────────────────────────────────╮
[32m│[m[37m[m[7;37m [m                  [32m│[m│                                      hey│
[32m│[m[30m                   [m[32m│[m│                                         │
[32m│[m[30m                   [m[32m│[m│                                         │
[32m╰───────────────────╯[m│                                         │
╭─Context───────────╮│                                         │
│[38;2;98;98;98mNo Context.[m        ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
│                   ││                                         │
╰───────────────────╯╰─────────────────────────────────────────╯
---
